fixed align loading

--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -180,6 +180,5 @@
 }
 
 .loading {
-  position: absolute;
-  align-items: center;
+  margin-left: 50%;
 }
